tests/ui/consts/const-eval/stable-metric/ctfe-simple-loop.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ctfe-simple-loop.rs:5:5
   |
LL | /     while index < n {
LL | |         index = index + 1;
LL | |     }
   | |_____^ exceeded interpreter step limit (see `#[const_eval_limit]`)
   |
note: inside `simple_loop`
  --> $DIR/ctfe-simple-loop.rs:5:5
   |
LL | /     while index < n {
LL | |         index = index + 1;
LL | |     }
   | |_____^
note: inside `X`
  --> $DIR/ctfe-simple-loop.rs:11:16
   |
LL | const X: u32 = simple_loop(19);
   |                ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
